log
Fri 12 Aug 2022 02:13:43 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:23: error: expected expression before ‘Persona’
   62 |   scanf("%s""%s""%d",&Persona.nombre,&Persona.rut,&Persona.edad);
      |                       ^~~~~~~
exercises.c: In function ‘crearVector’:
exercises.c:81:16: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   81 |   int vector = malloc (n*sizeof(int));
      |                ^~~~~~
exercises.c:82:10: error: returning ‘int’ from a function with return type ‘Vector *’ makes pointer from integer without a cast [-Werror=int-conversion]
   82 |   return vector;
      |          ^~~~~~
exercises.c: In function ‘asignarValor’:
exercises.c:92:17: error: expected ‘;’ before ‘)’ token
   92 |   for (i = valor)
      |                 ^
      |                 ;
exercises.c:92:17: error: expected expression before ‘)’ token
exercises.c:94:1: error: expected expression before ‘}’ token
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
47b30b6
Fri 12 Aug 2022 02:14:50 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:23: error: expected expression before ‘Persona’
   62 |   scanf("%s""%s""%d",&Persona.nombre,&Persona.rut,&Persona.edad);
      |                       ^~~~~~~
exercises.c: In function ‘crearVector’:
exercises.c:81:16: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   81 |   int vector = malloc (n*sizeof(int));
      |                ^~~~~~
exercises.c:82:10: error: returning ‘int’ from a function with return type ‘Vector *’ makes pointer from integer without a cast [-Werror=int-conversion]
   82 |   return vector;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
728a9d7
Fri 12 Aug 2022 02:15:47 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:23: error: expected expression before ‘Persona’
   62 |   scanf("%s""%s""%d",&Persona.nombre,&Persona.rut,&Persona.edad);
      |                       ^~~~~~~
Compilation failed
ea71ec6
Fri 12 Aug 2022 02:16:22 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:23: error: expected expression before ‘Persona’
   62 |   scanf("%s""%s""%d",&Persona.nombre,&Persona.rut,&Persona.edad);
      |                       ^~~~~~~
Compilation failed
11ce053
Fri 12 Aug 2022 02:17:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:21: error: expected expression before ‘Persona’
   62 |   scanf("%s %s %d",&Persona.nombre,&Persona.rut,&Persona.edad);
      |                     ^~~~~~~
Compilation failed
99c0283
Fri 12 Aug 2022 02:17:46 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
673794a
Fri 12 Aug 2022 02:23:40 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:3: error: too few arguments to function ‘sumaN’
   41 |   sumaN();
      |   ^~~~~
exercises.c:22:5: note: declared here
   22 | int sumaN(int a[], int N) {
      |     ^~~~~
exercises.c:42:11: error: too few arguments to function ‘sumaN’
   42 |   *suma = sumaN()
      |           ^~~~~
exercises.c:22:5: note: declared here
   22 | int sumaN(int a[], int N) {
      |     ^~~~~
exercises.c:42:18: error: expected ‘;’ before ‘}’ token
   42 |   *suma = sumaN()
      |                  ^
      |                  ;
   43 | 
   44 | }
      | ~                 
Compilation failed
04a2efb
Fri 12 Aug 2022 02:23:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:3: error: too few arguments to function ‘sumaN’
   41 |   sumaN();
      |   ^~~~~
exercises.c:22:5: note: declared here
   22 | int sumaN(int a[], int N) {
      |     ^~~~~
exercises.c:42:11: error: too few arguments to function ‘sumaN’
   42 |   *suma = sumaN();
      |           ^~~~~
exercises.c:22:5: note: declared here
   22 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
e79626b
Fri 12 Aug 2022 02:25:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:19: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   int sum = sumaN(2,3);
      |                   ^
      |                   |
      |                   int
exercises.c:22:15: note: expected ‘int *’ but argument is of type ‘int’
   22 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c:41:7: error: unused variable ‘sum’ [-Werror=unused-variable]
   41 |   int sum = sumaN(2,3);
      |       ^~~
exercises.c:41:13: error: ‘sumaN’ accessing 4 bytes in a region of size 0 [-Werror=stringop-overflow=]
   41 |   int sum = sumaN(2,3);
      |             ^~~~~~~~~~
exercises.c:41:13: note: referencing argument 1 of type ‘int *’
exercises.c:22:5: note: in a call to function ‘sumaN’
   22 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1: all warnings being treated as errors
Compilation failed
6bb1948
Fri 12 Aug 2022 02:26:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:20: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   int sum = sumaN(a[5],3);
      |                   ~^~~
      |                    |
      |                    int
exercises.c:22:15: note: expected ‘int *’ but argument is of type ‘int’
   22 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c:41:7: error: unused variable ‘sum’ [-Werror=unused-variable]
   41 |   int sum = sumaN(a[5],3);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
62b9de0
Fri 12 Aug 2022 02:27:13 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:20: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   int sum = sumaN(a[5],3);
      |                   ~^~~
      |                    |
      |                    int
exercises.c:22:15: note: expected ‘int *’ but argument is of type ‘int’
   22 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
ab65e1a
Fri 12 Aug 2022 02:27:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:19: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   int sum = sumaN(n);
      |                   ^
      |                   |
      |                   int
exercises.c:22:15: note: expected ‘int *’ but argument is of type ‘int’
   22 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c:41:13: error: too few arguments to function ‘sumaN’
   41 |   int sum = sumaN(n);
      |             ^~~~~
exercises.c:22:5: note: declared here
   22 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1: all warnings being treated as errors
Compilation failed
ae842d8
Fri 12 Aug 2022 02:28:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:21: error: expected expression before ‘]’ token
   41 |   int sum = sumaN(a[],n);
      |                     ^
Compilation failed
a1d75a7
Fri 12 Aug 2022 02:28:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:20: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   int sum = sumaN(a[n],n);
      |                   ~^~~
      |                    |
      |                    int
exercises.c:22:15: note: expected ‘int *’ but argument is of type ‘int’
   22 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
ea2eede
Fri 12 Aug 2022 02:29:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:21: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   int *sum = sumaN(a[n],n);
      |                    ~^~~
      |                     |
      |                     int
exercises.c:22:15: note: expected ‘int *’ but argument is of type ‘int’
   22 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c:41:14: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   int *sum = sumaN(a[n],n);
      |              ^~~~~
exercises.c:42:9: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   42 |   *suma = sum;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
47fa64a
